# GELD-VRP

./: .gitignore  README.md  pyproject.toml  slurm_gen_cvrptw.bash  slurm_train.bash  vrp-extension-notes.md
docs/: VRPTW_EXTENSION_PLAN.md  vrp-extension-notes.md
experiments/hgs_label_gap/: audit_labels.py  cpsat_solver.py  vrpsolver_adapter.py
geld/: __init__.py  paths.py
geld/cli/: eval_reallife.py  eval_synthetic.py  eval_tsplib.py  train_sl.py  train_stage2.py  train_stage_1.py  train_stage_2.py
geld/config/: __init__.py  defaults.py  defaults_params.py
geld/data/: __init__.py  augmentations.py  collections.py  loaders.py
geld/env/: __init__.py  base.py  synthetic.py  tsplib.py
geld/inference/: __init__.py  evaluator.py
geld/model/: __init__.py  attention.py  geld_model.py  geometry.py  global_encoder.py  local_decoder.py
geld/search/: __init__.py  beam_search.py  prc.py  solver.py
geld/training/: __init__.py  sl_trainer.py  stage2_trainer.py  stage_1_trainer.py  stage_2_trainer.py
geld/utils/: __init__.py  device.py  experiment_tracker.py  logging.py  metrics.py
geld_cvrptw/cli/: benchmark_scaling.py  eval.py  train_stage_1.py  train_stage_2.py
geld_cvrptw/config/: defaults_params.py  paths.py
geld_cvrptw/env/: CVRPTW.py  mvmoe_cvrptwenv.py
geld_cvrptw/inference/: evaluator.py  pipeline.py  scaling_benchmark.py  types.py
geld_cvrptw/inference/decoders/: beam_search.py  bootstrap.py  greedy.py
geld_cvrptw/inference/postprocess/: __init__.py  re_construction.py  re_construction_rewrite.py
geld_cvrptw/model/: GELD_CVRPTW.py  attention.py  global_encoder.py  helpers.py  local_decoder.py
geld_cvrptw/training/: base_trainer.py  stage_1_trainer.py  stage_2_trainer.py
geld_cvrptw/utils/: device.py  experiment_tracker.py  logging.py
scripts/: generate_cvrptw.py  smoke_pipeline.sh  smoke_pipeline.slurm
tests/: conftest.py  test_beam_search.py  test_data_loaders.py  test_equivalence.py  test_experiment_tracker.py  test_geometry.py  test_prc_helpers.py  test_smoke_pipeline.py  test_tour_length.py
tests/support/: lehd_fixture.py  smoke_pipeline.py
