[project]
name = "geld"
version = "0.1.0"
description = "GELD: Global-view Encoder and Local-view Decoder for TSP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2.2",
    "numpy>=1.23.3",
    "matplotlib>=3.8.3",
    "tqdm>=4.66.2",
    "pytz>=2024.1",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
wandb = ["wandb>=0.16.0"]

[project.scripts]
geld-train-sl = "geld.cli.train_sl:main"
geld-train-stage2 = "geld.cli.train_stage2:main"
geld-eval-synthetic = "geld.cli.eval_synthetic:main"
geld-eval-tsplib = "geld.cli.eval_tsplib:main"
geld-cvrptw-eval = "geld_cvrptw.cli.eval:main"
geld-cvrptw-train-stage1 = "geld_cvrptw.cli.train_stage_1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geld", "geld_cvrptw"]

[tool.hatch.build.targets.sdist]
include = ["geld/**", "geld_cvrptw/**", "tests/**", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "smoke: end-to-end GPU/SLURM smoke tests (may take several minutes)",
]

[tool.ruff]
line-length = 120
